# DragonScaler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: imgui_glfw.lib
src/: main.cpp  scaler.cpp
